# react-fastapi-admin

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  clear.bat  cli.py  main.py  pyproject.toml  requirements.in  requirements.txt
.cursor/rules/: fastapi-backend-architecture.mdc  python-fastapi-coding-standards.mdc  react-api-integration.mdc  react-component-standards.mdc  react-development-workflow.mdc  react-error-handling.mdc  react-styling-ui.mdc  react-web-project-structure.mdc  vue-frontend-architecture.mdc
app/: __init__.py
app/api/v1/: __init__.py
app/api/v1/apis/: __init__.py  apis.py
app/api/v1/auditlog/: auditlog.py
app/api/v1/base/: base.py
app/api/v1/depts/: __init__.py  depts.py
app/config/: permission_config.json
app/controllers/: api.py  dept.py  permission.py  role.py  upload.py  upload_controller.py  user.py
app/core/: config.py  crud.py  dependency.py  exceptions.py  init_app.py  middlewares.py
app/models/: __init__.py  admin.py  base.py  enums.py  product.py
app/schemas/: apis.py  base.py  login.py  menus.py  products.py  roles.py  upload.py  users.py
app/settings/: __init__.py  config.py  reload_config.py
app/tests/: test_log_system.py
app/utils/: __init__.py  config_manager.py  json_encoder.py  jwt_utils.py  log_control.py  module_discovery.py  password.py
deploy/: web.conf
docs/: 权限配置管理完整指南.md
react-web/: README.md  package-lock.json  package.json  pnpm-lock.yaml
react-web/src/: App.jsx  index.css
react-web/src/api/: index.js
react-web/src/components/: IconSelector.jsx
react-web/src/hooks/: useErrorHandler.js
react-web/src/router/: index.jsx
react-web/src/utils/: request.js
web/: README.md  README_ERROR_HANDLING.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
web/src/api/: index.js
web/src/components/: LoginRedirect.jsx  ProtectedRoute.jsx
web/src/composables/: useCRUD.js
web/src/router/: index.jsx
web/src/utils/: errorHandler.js  errorInit.js  passwordStrength.js
(+47 files in other folders)
